- Gson Lib 추가 - Json Convert Test 추가 (RecylcerView SeleadClass 를 이용한 여러 컨텐츠들 관리하는 로직 개발중..)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -165,4 +165,7 @@ dependencies {
     // Refresh Lib
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$rootProject.refreshLayoutVersion"
 
+    // Gson Lib
+    implementation "com.google.code.gson:gson:$rootProject.gsonVersion"
+
 }
