--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ buildscript {
         // Refresh Layout
         refreshLayoutVersion = '1.1.0'
 
+        // Gson Lib
+        gsonVersion = '2.8.5'
+
     }
     repositories {
         google()
