--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlinVersion = '1.4.21'
-        androidPluginVersion = '4.1.0'
+        androidPluginVersion = '4.1.1'
 
         // Common
         appCompatVersion = '1.2.0'
@@ -75,9 +75,9 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${androidPluginVersion}"
+        classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.google.gms:google-services:${googleServiceVersion}"
+        classpath "com.google.gms:google-services:$googleServiceVersion"
     }
 }
 
