- 로그인, 비로그인 상태에 따라서 메모 로직 개발중 - Room 공부중! - 로그인 관련 서비스 LoginManager 로 분리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,10 +146,10 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$rootProject.pagingVersion"
 
     // alternatively - without Android dependencies for testing
-    testImplementation "androidx.paging:paging-common:$rootProject.pagingVersion" // For Kotlin use paging-common-ktx
+    testImplementation "androidx.paging:paging-common-ktx:$rootProject.pagingVersion" // For Kotlin use paging-common-ktx
 
     // optional - RxJava support
-    implementation "androidx.paging:paging-rxjava2:$rootProject.pagingVersion" // For Kotlin use paging-rxjava2-ktx
+    implementation "androidx.paging:paging-rxjava2-ktx:$rootProject.pagingVersion" // For Kotlin use paging-rxjava2-ktx
 
     // FireBase
     implementation "com.google.firebase:firebase-core:$rootProject.firebaseCoreVersion"
