--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+}
 
 android {
     compileSdkVersion 29
@@ -34,10 +35,6 @@ android {
 
 //    packagingOptions {
 //        pickFirst("META-INF/kotlinx-coroutines-core.kotlin_module")
-//    }
-
-//    dataBinding {
-//        enabled = true
 //    }
 
     // Gradle 4.0.0 대응
