- Pacakage Name 재수정 -> extension -> convenience
- RxExtension -> Extensions 클래스명 수정
Mutlple Null Check 확장 함수 추가.
- CommonBindingAdapter
-> 각 함수들 주석 처리 및 코드 정리
-> 공통함수들 추가.

-ItemListAdapter 추가
-ArgumentDefine 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme"/> <!-- [s] 카메라 캡처 관련 -->
+
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.hmju.memo"
@@ -82,7 +84,9 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
-        </provider> <!-- Firebase Service -->
+        </provider>
+
+        <!-- Firebase Service -->
         <service
             android:name=".fcm.MyFirebaseService"
             android:exported="false">
