- CommonBindingAdapter 수정 - EdtiTextBindingAdapter 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name=".ui.memo.MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.Memo"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
