--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.hmju.memo"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -87,7 +87,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.android.databinding:compiler:$rootProject.androidPluginVersion"
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -108,7 +108,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
 
     // Retrofit Coroutines
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$rootProject.retrofitCoroutineAdapterVersion"
+//    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$rootProject.retrofitCoroutineAdapterVersion"
 
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
@@ -135,8 +135,9 @@ dependencies {
     implementation "com.hmju.custombehavior:custom-behavior:1.0.0"
 
     // Reactive X
-    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rootProject.rxKotlinVersion"
 
     // RxPermission
     implementation "com.github.tbruyelle:rxpermissions:$rootProject.rxPermissionVersion"
@@ -157,7 +158,7 @@ dependencies {
     //Navigation Architecture Component
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navVersion"
-    implementation "androidx.navigation:navigation-runtime:$rootProject.navVersion"
+    implementation "androidx.navigation:navigation-runtime-ktx:$rootProject.navVersion"
 
     // Loading Lib
     implementation "com.github.ybq:Android-SpinKit:$rootProject.loadingLayoutVersion"
