--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         glideVersion = '4.11.0'
 
         // Material
-        materialVersion = '1.2.1'
+        materialVersion = '1.3.0-beta01'
 
         // MultiDex
         multiDexVersion = '2.0.1'
@@ -28,20 +28,21 @@ buildscript {
         retrofitCoroutineAdapterVersion = '0.9.2'
 
         // OkHttp
-        okhttpVersion = '4.8.1'
+        okhttpVersion = '4.9.0'
 
         // Koin
         koinVersion = '2.0.1'
 
         // Room
-        roomVersion = '2.2.5'
+        roomVersion = '2.2.6'
 
         // Coroutines
         coroutinesVersion = '1.3.0'
 
         // Reactive X
-        rxJavaVersion = '2.2.15'
+        rxJavaVersion = '2.2.17'
         rxAndroidVersion = '2.1.1'
+        rxKotlinVersion = '2.4.0'
         rxPermissionVersion = '0.10.2'
 
         // Paging Lib
@@ -56,7 +57,7 @@ buildscript {
         firebaseMessageVersion = '20.3.0'
 
         // Navigation Architecture Component
-        navVersion = '2.3.0'
+        navVersion = '2.3.2'
 
         // Loading Layout
         loadingLayoutVersion = '1.4.0'
